--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
                 <li><a href="https://github.com/Ziper90">Ziper90</a></li>
                 <li><a href="https://github.com/rishav-pandey">Rishav Pandey</a></li>
                 <li><a href="https://github.com/Amannim98">Aman Nim</a></li>
-                <li><a href="https://github.com/jessufgit">Jessufgit</a></li>
-                <li><a href="https://github.com/ostyq">Veronika</a></li>
+		<li><a href="https://github.com/abhayak11">Abhaya Kirtivasan</a></li>	
+		li><a href="https://github.com/ostyq">Veronika</a></li>
                 <li><a href="https://github.com/carloslahrssen">Carlos Lahrssen</a></li>
                 <li><a href="https://github.com/Bazooo">Bazooo</a></li>
                 <li><a href="https://github.com/MisterBiggs">MisterBiggs</a></li>
